--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@vue/cli-service": "~5.0.0",
     "animejs": "^3.2.2",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "vue-router": "^4.4.0"
   },
   "eslintConfig": {
     "root": true,
